Ändrat i filer för installtionen.

--- a/SGAB/App.config
+++ b/SGAB/App.config
@@ -54,7 +54,7 @@
     <add key="NamnOrderNrKolumn" value="Ordernr" />
     
     <!-- Sökväg till projektfil innehållande info om kartdata som ska visas-->
-    <add key="TatukProjectFilePath" value="C:\SG_GIS_Databas\Kartdata\Test2.TTKGP" />
+    <add key="TatukProjectFilePath" value="C:\SG_GIS_Databas\Kartdata\SGAB.TTKGP" />
     
     <!-- Sökväg  till katalog med kartdata, underlättar vid öppnande av nya lager i kartan-->
     <add key="FolderPath" value="C:\SG_GIS_Databas\Kartdata\" />
