--- a/SGAB/App.config
+++ b/SGAB/App.config
@@ -25,7 +25,10 @@
     <add key="AccessDBSecurity" value="Persist Security Info=False" />
     
     <!-- Synkroniseringstiden i sekunder mot domändatabasen -->
-    <add key="SynchronizationTime" value="3600" />
+    <add key="SynchronizationTime" value="15" />
+
+    <!-- Synkroniseringstiden i sekunder mot domändatabasen -->
+    <add key="SilentErrorMessages" value="true" />
     
     <!-- Sökväg till symboler för att markera GPS-punkten-->
     <add key="SymbolGpsN" value="C:\SG_GIS_Databas\Bilder\PilN.png" />
