Ny version 1.6.0. Stöd för https.

--- a/SGAB/App.config
+++ b/SGAB/App.config
@@ -3,171 +3,171 @@
   <appSettings>
     <!-- GPS -->
     <!-- GPSens BaudRate-->
-    <add key="GPSBaudRate" value="4800" />
+    <add key="GPSBaudRate" value="4800"/>
     
     <!-- GPSens Com-ports uttag-->
-    <add key="GPSPort" value="4" />
+    <add key="GPSPort" value="4"/>
     
     <!-- Intervallet för hur ofta GPSen ska uppdateras-->
-    <add key="GPSIntervall" value="2000" />
+    <add key="GPSIntervall" value="2000"/>
     
     <!-- Anger hur stor avvikelse i meter GPS:en skall ha innan den visar en pil-->
-    <add key="GPSDeviationInMetersMin" value="1" />
-    <add key="GPSDeviationInMetersMax" value="500" />
+    <add key="GPSDeviationInMetersMin" value="1"/>
+    <add key="GPSDeviationInMetersMax" value="500"/>
     
     <!-- Inloggning -->
-    <add key="username" value="M4" />
-    <add key="password" value="M4" />
+    <add key="username" value="M4"/>
+    <add key="password" value="M4"/>
     
     <!--Connectionstring till lokal Access-databas -->
-    <add key="AccessDBProvider" value="Provider=Microsoft.Jet.OLEDB.4.0;" />
-    <add key="AccessDBPath" value="Data Source=C:\SG_GIS_Databas\Mapp som inte finns\SGAB.mdb;" />
-    <add key="AccessDBSecurity" value="Persist Security Info=False" />
+    <add key="AccessDBProvider" value="Provider=Microsoft.Jet.OLEDB.4.0;"/>
+    <add key="AccessDBPath" value="Data Source=C:\SG_GIS_Databas\Mapp_som_inte_finns\SGAB.mdb;"/>
+    <add key="AccessDBSecurity" value="Persist Security Info=False"/>
     
     <!-- Synkroniseringstiden i sekunder mot domändatabasen -->
-    <add key="SynchronizationTime" value="15" />
+    <add key="SynchronizationTime" value="120"/>
 
     <!-- Synkroniseringstiden i sekunder mot domändatabasen -->
-    <add key="SilentErrorMessages" value="true" />
+    <add key="SilentErrorMessages" value="true"/>
     
     <!-- Sökväg till symboler för att markera GPS-punkten-->
-    <add key="SymbolGpsN" value="C:\SG_GIS_Databas\Bilder\PilN.png" />
-    <add key="SymbolGpsNO" value="C:\SG_GIS_Databas\Bilder\PilNO.png" />
-    <add key="SymbolGpsO" value="C:\SG_GIS_Databas\Bilder\PilO.png" />
-    <add key="SymbolGpsSO" value="C:\SG_GIS_Databas\Bilder\PilSO.png" />
-    <add key="SymbolGpsS" value="C:\SG_GIS_Databas\Bilder\PilS.png" />
-    <add key="SymbolGpsSV" value="C:\SG_GIS_Databas\Bilder\PilSV.png" />
-    <add key="SymbolGpsV" value="C:\SG_GIS_Databas\Bilder\PilV.png" />
-    <add key="SymbolGpsNV" value="C:\SG_GIS_Databas\Bilder\PilNV.png" />
-    <add key="SymbolGpsDefault" value="C:\SG_GIS_Databas\Bilder\Default.png" />
+    <add key="SymbolGpsN" value="C:\SG_GIS_Databas\Bilder\PilN.png"/>
+    <add key="SymbolGpsNO" value="C:\SG_GIS_Databas\Bilder\PilNO.png"/>
+    <add key="SymbolGpsO" value="C:\SG_GIS_Databas\Bilder\PilO.png"/>
+    <add key="SymbolGpsSO" value="C:\SG_GIS_Databas\Bilder\PilSO.png"/>
+    <add key="SymbolGpsS" value="C:\SG_GIS_Databas\Bilder\PilS.png"/>
+    <add key="SymbolGpsSV" value="C:\SG_GIS_Databas\Bilder\PilSV.png"/>
+    <add key="SymbolGpsV" value="C:\SG_GIS_Databas\Bilder\PilV.png"/>
+    <add key="SymbolGpsNV" value="C:\SG_GIS_Databas\Bilder\PilNV.png"/>
+    <add key="SymbolGpsDefault" value="C:\SG_GIS_Databas\Bilder\Default.png"/>
     
     <!-- symbolstorlek för Gps-->
-    <add key="SymbolSizeGps" value="-50" />
+    <add key="SymbolSizeGps" value="-50"/>
     
     <!-- Sökvägar och namn -->
     <!--Namn på lagret med beställningarna-->
-    <add key="NamnBestallningsLager" value="Bestallning_Tatuk" />
+    <add key="NamnBestallningsLager" value="Bestallning_Tatuk"/>
     
     <!-- Namn på kolumner i tabfilen -->
-    <add key="NamnCanKolumn" value="CAN ton" />
-    <add key="NamnStatusKolumn" value="Status" />
-    <add key="NamnFöretagsKolumn" value="Namn" />
-    <add key="NamnRegionKolumn" value="Region/Förvaltning" />
-    <add key="NamnDistriktKolumn" value="Distrikt/Område" />
-    <add key="NamnOrderNrKolumn" value="Ordernr" />
+    <add key="NamnCanKolumn" value="CAN ton"/>
+    <add key="NamnStatusKolumn" value="Status"/>
+    <add key="NamnFöretagsKolumn" value="Namn"/>
+    <add key="NamnRegionKolumn" value="Region/Förvaltning"/>
+    <add key="NamnDistriktKolumn" value="Distrikt/Område"/>
+    <add key="NamnOrderNrKolumn" value="Ordernr"/>
     
     <!-- Sökväg till projektfil innehållande info om kartdata som ska visas-->
-    <add key="TatukProjectFilePath" value="C:\SG_GIS_Databas\Kartdata\SGAB.TTKGP" />
+    <add key="TatukProjectFilePath" value="C:\SG_GIS_Databas\Kartdata\SGAB.TTKGP"/>
     
     <!-- Sökväg  till katalog med kartdata, underlättar vid öppnande av nya lager i kartan-->
-    <add key="FolderPath" value="C:\SG_GIS_Databas\Kartdata\" />
+    <add key="FolderPath" value="C:\SG_GIS_Databas\Kartdata\"/>
     
     <!--Sökväg  till mappen med Excel-filerna-->
-    <add key="ExcelFilePath" value="C:\SG_GIS_Databas\ExcelFiler\" />
+    <add key="ExcelFilePath" value="C:\SG_GIS_Databas\ExcelFiler\"/>
     
     <!-- Kolumnnamn för Excel -->
-    <add key="NamnRegion_FörvaltningKolumn" value="RegionForv" />
-    <add key="NamnDistrikt_OmrådeKolumn" value="DistriktOm" />
-    <add key="NamnOrdernrKolumn" value="Ordernr" />
+    <add key="NamnRegion_FörvaltningKolumn" value="RegionForv"/>
+    <add key="NamnDistrikt_OmrådeKolumn" value="DistriktOm"/>
+    <add key="NamnOrdernrKolumn" value="Ordernr"/>
     
     <!-- Kartlager -->
-    <add key="Sverigekartan" value="Sverigekartan" />
-    <add key="TerrängkartaSyd" value="TerrangkartanSyd" />
-    <add key="TerrängkartanMitt" value="TerrangkartanMitt" />
-    <add key="TerrängkartanNorr" value="TerrangkartanNorr" />
-    <add key="ÖversiktskartanSyd" value="OversiktskartanSyd" />
-    <add key="ÖversiktskartanMitt" value="OversiktskartanMitt" />
-    <add key="ÖversiktskartanNorr" value="OversiktskartanNorr" />
+    <add key="Sverigekartan" value="Sverigekartan"/>
+    <add key="TerrängkartaSyd" value="TerrangkartanSyd"/>
+    <add key="TerrängkartanMitt" value="TerrangkartanMitt"/>
+    <add key="TerrängkartanNorr" value="TerrangkartanNorr"/>
+    <add key="ÖversiktskartanSyd" value="OversiktskartanSyd"/>
+    <add key="ÖversiktskartanMitt" value="OversiktskartanMitt"/>
+    <add key="ÖversiktskartanNorr" value="OversiktskartanNorr"/>
     
     <!--Sökväg  till arbetskatalog-->
-    <add key="WorkPath" value="C:\SG_GIS_Databas\Arbetskatalog\" />
+    <add key="WorkPath" value="C:\SG_GIS_Databas\Arbetskatalog\"/>
     
     <!-- Log -->
-    <add key="LogExceptions" value="True" />
-    <add key="LogFilePath" value="C:\SG_GIS_Databas\Arbetskatalog\SG_GIS_Exceptions.log" />
+    <add key="LogExceptions" value="True"/>
+    <add key="LogFilePath" value="C:\SG_GIS_Databas\Arbetskatalog\SG_GIS_Exceptions.log"/>
     
     <!-- Storlek och zoom -->
     <!--Önskad storlek på applikationen, exempel: DM mob 1300,840 eller DM docka 1300,1055 eller annat-->
-    <add key="AppSize" value="1280,800" />
+    <add key="AppSize" value="1280,800"/>
     
     <!--Zoominställningar för uppstart-->
-    <add key="VisibleExtent" value="257079,647111,6587790,6806280" />
+    <add key="VisibleExtent" value="257079,647111,6587790,6806280"/>
     
     <!--<add key="VisibleExtent" value="1338000,1667000,6638000,6932000" /> OLD -->
     
     <!--Zoominställningar för maxbild-->
-    <add key="MaxExtent" value="240000,940000,6105000,7675000" />
+    <add key="MaxExtent" value="240000,940000,6105000,7675000"/>
     <!--<add key="MaxExtent" value="1171599,1899960,6105051,7674921" /> OLD -->
     
     <!-- Inställningar för transformation -->
-    <add key="srInIni" value="GEOGCS[&quot;GCS_WGS_1984&quot;,DATUM[&quot;D_WGS_1984&quot;,SPHEROID[&quot;WGS_1984&quot;,6378137,298.257223563]],PRIMEM[&quot;Greenwich&quot;,0],UNIT[&quot;Degree&quot;,0.017453292519943295]]" />
-    <add key="srOutIni" value="PROJCS[&quot;SWEREF99 TM&quot;,GEOGCS[&quot;SWEREF99&quot;,DATUM[&quot;D_SWEREF99&quot;,SPHEROID[&quot;GRS_1980&quot;,6378137,298.257222101]],PRIMEM[&quot;Greenwich&quot;,0],UNIT[&quot;Degree&quot;,0.017453292519943295]],PROJECTION[&quot;Transverse_Mercator&quot;],PARAMETER[&quot;latitude_of_origin&quot;,0],PARAMETER[&quot;central_meridian&quot;,15],PARAMETER[&quot;scale_factor&quot;,0.9996],PARAMETER[&quot;false_easting&quot;,500000],PARAMETER[&quot;false_northing&quot;,0],UNIT[&quot;Meter&quot;,1]]" />
+    <add key="srInIni" value="GEOGCS[&quot;GCS_WGS_1984&quot;,DATUM[&quot;D_WGS_1984&quot;,SPHEROID[&quot;WGS_1984&quot;,6378137,298.257223563]],PRIMEM[&quot;Greenwich&quot;,0],UNIT[&quot;Degree&quot;,0.017453292519943295]]"/>
+    <add key="srOutIni" value="PROJCS[&quot;SWEREF99 TM&quot;,GEOGCS[&quot;SWEREF99&quot;,DATUM[&quot;D_SWEREF99&quot;,SPHEROID[&quot;GRS_1980&quot;,6378137,298.257222101]],PRIMEM[&quot;Greenwich&quot;,0],UNIT[&quot;Degree&quot;,0.017453292519943295]],PROJECTION[&quot;Transverse_Mercator&quot;],PARAMETER[&quot;latitude_of_origin&quot;,0],PARAMETER[&quot;central_meridian&quot;,15],PARAMETER[&quot;scale_factor&quot;,0.9996],PARAMETER[&quot;false_easting&quot;,500000],PARAMETER[&quot;false_northing&quot;,0],UNIT[&quot;Meter&quot;,1]]"/>
     
     <!-- StoraEnso -->
-    <add key="StoraEnso0" value="C:\SG_GIS_Databas\Bilder\StoraEnso0.png" />
-    <add key="StoraEnso0_S" value="C:\SG_GIS_Databas\Bilder\StoraEnso0_S.png" />
-    <add key="StoraEnso1" value="C:\SG_GIS_Databas\Bilder\StoraEnso1.png" />
-    <add key="StoraEnso1_S" value="C:\SG_GIS_Databas\Bilder\StoraEnso1_S.png" />
-    <add key="StoraEnso2" value="C:\SG_GIS_Databas\Bilder\StoraEnso2.png" />
-    <add key="StoraEnso2_S" value="C:\SG_GIS_Databas\Bilder\StoraEnso2_S.png" />
-    <add key="StoraEnso3" value="C:\SG_GIS_Databas\Bilder\StoraEnso3.png" />
-    <add key="StoraEnso3_S" value="C:\SG_GIS_Databas\Bilder\StoraEnso3_S.png" />
+    <add key="StoraEnso0" value="C:\SG_GIS_Databas\Bilder\StoraEnso0.png"/>
+    <add key="StoraEnso0_S" value="C:\SG_GIS_Databas\Bilder\StoraEnso0_S.png"/>
+    <add key="StoraEnso1" value="C:\SG_GIS_Databas\Bilder\StoraEnso1.png"/>
+    <add key="StoraEnso1_S" value="C:\SG_GIS_Databas\Bilder\StoraEnso1_S.png"/>
+    <add key="StoraEnso2" value="C:\SG_GIS_Databas\Bilder\StoraEnso2.png"/>
+    <add key="StoraEnso2_S" value="C:\SG_GIS_Databas\Bilder\StoraEnso2_S.png"/>
+    <add key="StoraEnso3" value="C:\SG_GIS_Databas\Bilder\StoraEnso3.png"/>
+    <add key="StoraEnso3_S" value="C:\SG_GIS_Databas\Bilder\StoraEnso3_S.png"/>
     
     <!-- All -->
-    <add key="All0" value="C:\SG_GIS_Databas\Bilder\All0.png" />
-    <add key="All0_S" value="C:\SG_GIS_Databas\Bilder\All0_S.png" />
-    <add key="All1" value="C:\SG_GIS_Databas\Bilder\All1.png" />
-    <add key="All1_S" value="C:\SG_GIS_Databas\Bilder\All1_S.png" />
-    <add key="All2" value="C:\SG_GIS_Databas\Bilder\All2.png" />
-    <add key="All2_S" value="C:\SG_GIS_Databas\Bilder\All2_S.png" />
-    <add key="All3" value="C:\SG_GIS_Databas\Bilder\All3.png" />
-    <add key="All3_S" value="C:\SG_GIS_Databas\Bilder\All3_S.png" />
+    <add key="All0" value="C:\SG_GIS_Databas\Bilder\All0.png"/>
+    <add key="All0_S" value="C:\SG_GIS_Databas\Bilder\All0_S.png"/>
+    <add key="All1" value="C:\SG_GIS_Databas\Bilder\All1.png"/>
+    <add key="All1_S" value="C:\SG_GIS_Databas\Bilder\All1_S.png"/>
+    <add key="All2" value="C:\SG_GIS_Databas\Bilder\All2.png"/>
+    <add key="All2_S" value="C:\SG_GIS_Databas\Bilder\All2_S.png"/>
+    <add key="All3" value="C:\SG_GIS_Databas\Bilder\All3.png"/>
+    <add key="All3_S" value="C:\SG_GIS_Databas\Bilder\All3_S.png"/>
     
     <!-- SCA -->
-    <add key="SCA0" value="C:\SG_GIS_Databas\Bilder\SCA0.png" />
-    <add key="SCA0_S" value="C:\SG_GIS_Databas\Bilder\SCA0_S.png" />
-    <add key="SCA1" value="C:\SG_GIS_Databas\Bilder\SCA1.png" />
-    <add key="SCA1_S" value="C:\SG_GIS_Databas\Bilder\SCA1_S.png" />
-    <add key="SCA2" value="C:\SG_GIS_Databas\Bilder\SCA2.png" />
-    <add key="SCA2_S" value="C:\SG_GIS_Databas\Bilder\SCA2_S.png" />
-    <add key="SCA3" value="C:\SG_GIS_Databas\Bilder\SCA3.png" />
-    <add key="SCA3_S" value="C:\SG_GIS_Databas\Bilder\SCA3_S.png" />
+    <add key="SCA0" value="C:\SG_GIS_Databas\Bilder\SCA0.png"/>
+    <add key="SCA0_S" value="C:\SG_GIS_Databas\Bilder\SCA0_S.png"/>
+    <add key="SCA1" value="C:\SG_GIS_Databas\Bilder\SCA1.png"/>
+    <add key="SCA1_S" value="C:\SG_GIS_Databas\Bilder\SCA1_S.png"/>
+    <add key="SCA2" value="C:\SG_GIS_Databas\Bilder\SCA2.png"/>
+    <add key="SCA2_S" value="C:\SG_GIS_Databas\Bilder\SCA2_S.png"/>
+    <add key="SCA3" value="C:\SG_GIS_Databas\Bilder\SCA3.png"/>
+    <add key="SCA3_S" value="C:\SG_GIS_Databas\Bilder\SCA3_S.png"/>
     
     <!-- Sveaskog -->
-    <add key="Sveaskog0" value="C:\SG_GIS_Databas\Bilder\Sveaskog0.png" />
-    <add key="Sveaskog0_S" value="C:\SG_GIS_Databas\Bilder\Sveaskog0_S.png" />
-    <add key="Sveaskog1" value="C:\SG_GIS_Databas\Bilder\Sveaskog1.png" />
-    <add key="Sveaskog1_S" value="C:\SG_GIS_Databas\Bilder\Sveaskog1_S.png" />
-    <add key="Sveaskog2" value="C:\SG_GIS_Databas\Bilder\Sveaskog2.png" />
-    <add key="Sveaskog2_S" value="C:\SG_GIS_Databas\Bilder\Sveaskog2_S.png" />
-    <add key="Sveaskog3" value="C:\SG_GIS_Databas\Bilder\Sveaskog3.png" />
-    <add key="Sveaskog3_S" value="C:\SG_GIS_Databas\Bilder\Sveaskog3_S.png" />
+    <add key="Sveaskog0" value="C:\SG_GIS_Databas\Bilder\Sveaskog0.png"/>
+    <add key="Sveaskog0_S" value="C:\SG_GIS_Databas\Bilder\Sveaskog0_S.png"/>
+    <add key="Sveaskog1" value="C:\SG_GIS_Databas\Bilder\Sveaskog1.png"/>
+    <add key="Sveaskog1_S" value="C:\SG_GIS_Databas\Bilder\Sveaskog1_S.png"/>
+    <add key="Sveaskog2" value="C:\SG_GIS_Databas\Bilder\Sveaskog2.png"/>
+    <add key="Sveaskog2_S" value="C:\SG_GIS_Databas\Bilder\Sveaskog2_S.png"/>
+    <add key="Sveaskog3" value="C:\SG_GIS_Databas\Bilder\Sveaskog3.png"/>
+    <add key="Sveaskog3_S" value="C:\SG_GIS_Databas\Bilder\Sveaskog3_S.png"/>
     
     <!-- Stift -->
-    <add key="Stift0" value="C:\SG_GIS_Databas\Bilder\Stift0.png" />
-    <add key="Stift0_S" value="C:\SG_GIS_Databas\Bilder\Stift0_S.png" />
-    <add key="Stift1" value="C:\SG_GIS_Databas\Bilder\Stift1.png" />
-    <add key="Stift1_S" value="C:\SG_GIS_Databas\Bilder\Stift1_S.png" />
-    <add key="Stift2" value="C:\SG_GIS_Databas\Bilder\Stift2.png" />
-    <add key="Stift2_S" value="C:\SG_GIS_Databas\Bilder\Stift2_S.png" />
-    <add key="Stift3" value="C:\SG_GIS_Databas\Bilder\Stift3.png" />
-    <add key="Stift3_S" value="C:\SG_GIS_Databas\Bilder\Stift3_S.png" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="Stift0" value="C:\SG_GIS_Databas\Bilder\Stift0.png"/>
+    <add key="Stift0_S" value="C:\SG_GIS_Databas\Bilder\Stift0_S.png"/>
+    <add key="Stift1" value="C:\SG_GIS_Databas\Bilder\Stift1.png"/>
+    <add key="Stift1_S" value="C:\SG_GIS_Databas\Bilder\Stift1_S.png"/>
+    <add key="Stift2" value="C:\SG_GIS_Databas\Bilder\Stift2.png"/>
+    <add key="Stift2_S" value="C:\SG_GIS_Databas\Bilder\Stift2_S.png"/>
+    <add key="Stift3" value="C:\SG_GIS_Databas\Bilder\Stift3.png"/>
+    <add key="Stift3_S" value="C:\SG_GIS_Databas\Bilder\Stift3_S.png"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
 
     <add key="TestMode" value="false"/>
   </appSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
       </providers>
     </roleManager>
   </system.web>
